tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__AutomationTier1-AAAAAAAAAAAAAAAAAAACtw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 695,
  "prerequisites": [
    35,
    74
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Do you want to automate your smeltery because you're planning to make stacks and stacks of glass blocks?\n\nNo problem, craft a large bronze pipe and place it under the faucet. Make sure to connect the pipe to the faucet using a wrench. Now the molten fluid will flow inside the pipe. Under or next to the pipe you have to place the casting basins or tables.\n\nA hopper and a chest underneath will auto-output products from the casting blocks.\n\nNOTE: Faucets will output precisely 144L each activation if you toggle it off immediately. That's going to have some uses later on...",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lAutomation, Tier 1",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    35,
    74
  ],
  "rewards": [],
  "tasks": []
}
