tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__AwakenedDraconiu-AAAAAAAAAAAAAAAAAAAHKQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1833,
  "prerequisites": [
    1817
  ],
  "properties": {
    "auto_claim": false,
    "desc": "To process the most advanced materials like Infinity Catalyst or Infinity you need more than 9900K. Upgrade your EBF to 10800K.\n\n[note]With the heat adjustment included, you can get up to 11601K if you OC with UHV hatches. Not that you need it or anything.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lAwakened Draconium Coil Upgrade",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1817
  ],
  "rewards": [],
  "tasks": []
}
