tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__BacterialVat-AAAAAAAAAAAAAAAAAAAKAQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2561,
  "prerequisites": [
    160,
    2566
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Bacterial Vat is a unique multiblock machine with its own recipes. But it also has advanced versions of many brewery recipes.\n\nThe Vat isn't mandatory in this tier, but there are many useful recipes and you'll need it later on, so let's build one!\n\nAll recipes require a §cculture§r, some recipes require a specific §cGlass-Tier.§r\n\nThe culture is made in a BioLab and §lput in the controller.§r\n\nThe Glass-Tier is calculated as LV = Tier 1, so this quest requires you to make tier 3 glass.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lBacterial Vat",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    160,
    2566
  ],
  "rewards": [],
  "tasks": []
}
