tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__BetterThanDuctTa-AAAAAAAAAAAAAAAAAAAC8w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 755,
  "prerequisites": [
    609,
    77
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Using a soldering iron tool to remove the \"burned out circuits\" message is cheaper than duct tape.\n\nThe soldering iron requires one soldering material item and 10,000 EU. Valid soldering materials are fine wires, rods, and ingots made from either tin, lead, or soldering alloy. The soldering iron will consume the first such material it finds in the player's inventory. Since you'll likely have more than enough, Fine Wires of Soldering Alloy are probably best.\n\nOther uses for the soldering iron:\n\n- It will adjust the redstone strength from weak to strong emitted by GT machines.\n- While holding it all pipes, wires, and cables will look very small, so that you can see everything past them, and also be sure of the exact connections.\n- Shift right-clicking on some machines with it will allow you to toggle multi-stack input, which can be very useful for automating certain assembler recipes.\n\nIn order to \"complete\" this quest you'll need to charge the soldering iron after you craft it.\n\nFor the other problems other tools are necessary. Keep in mind that you can put all needed tools in a toolbox to fix all problems in one click.\n\nPossible problems                Tool to fix\n\"Pipe is loose.\"                    Wrench\n\"Screws are loose.\"           Screwdriver\n\"Something is stuck.\"            Soft Mallet\n\"Platings are dented.\"           Hammer\n\"Circuitry burned out.\"    Soldering Iron\n\"That doesn't belong there.\"   Crowbar",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lBetter Than Duct Tape",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    609,
    77
  ],
  "rewards": [],
  "tasks": []
}
