tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__CatalyzingMiracl-AAAAAAAAAAAAAAAAAAAM2Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3289,
  "prerequisites": [
    3287
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The QFT uses the kind of catalyst that the Chemical Plant also does. However, like the plants that have Awakened Draconium coils or higher, it does not consume the catalyst's durability on recipe finish, behaving more like a real-life catalyst that is regenerated after being used. This makes the catalysts used here more expensive to craft, as was the case with the Infinite Mutation Catalyst for Mutated Living Solder, which is meant to be used only with those coils that make it last forever.\n\nGiven that there is no durability loss, it would seem only one catalyst needs to be crafted. However, there are two reasons for this to not be true: firstly, each QFT recipe uses a different catalyst; secondly, the QFT checks for parallels by counting the amount of catalysts it has in its Bulk Catalyst Housing for the recipe in question (limit of 2,147,483,647). This system makes it so that crafting 1 of the correct type of catalyst is required to unlock a recipe, but making more is completely optional and only changes the speed at which the multi crafts, provided it gets enough EU input.\n\nEvery catalyst needs some of the materials that it unlocks in the QFT, which is to say, the original processing line will have to be used to craft the catalyst that allows the player to skip it in the QFT. This applies to every recipe, and in turn every line that can be skipped.\n\nTo improve the general speed of processing, your one options is to get more parallels with catalysts. The other, more complicated way is to boost the chances of a successful output by adding more energy to the system, but in a special way: instead of using direct EU, using it to create a powerful plasma works to improve the QFT processing.\n\nIf the correct plasmas are added, the boosting will work, but it is also possible to upgrade the structure itself to perform chemistry skips that are not possible with the base QFT. These upgrades rely on more advanced and powerful materials, mainly in the material progression of DTPF recipes. However, those existing materials are not enough, because the quantum stabilization can't be maintained with those “foreign” substances. Luckily, the QFT itself can produce the items needed to build the upgraded casings, and these items are outputs of some of the skips performed in the multi. It begins by allowing the much simpler production of already-owned materials but, in this process, it unlocks entirely new materials that are useful to improve the structure itself.\n\nThere are three new items and four tiers in the structure. The first tier can be built without them, but every new tier needs a new item crafted in the tier before. These outputs are related to the recipe where they can be obtained, and they possess unique characteristics that, in real life, are only theoretical.\n\nThe first item you will need to craft is the Hyper-Stable Self-Healing Adhesive. To craft this material, proceed with the Glue/Solder recipe by using the Adhesion Promoter Catalyst. Additionally, make these other catalysts to prove you're well set in your QFT journey.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Catalyzing Miracles",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3287
  ],
  "rewards": [],
  "tasks": []
}
