tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__Cleanroom-AAAAAAAAAAAAAAAAAAADrA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 940,
  "prerequisites": [
    1231
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If you want to make more advanced (and cheaper!) circuits, you will need a Cleanroom. The Cleanroom is an interesting multiblock, because you will be placing other machines §oinside§r of the room!\n\nThe cleanroom is a hollow multiblock between 3x4x3 and 15x15x15 (WxHxL) blocks. The base does not need to be a square; a rectangular shape is fine. The top layer is built out of Filter Machine Casings, except for the edges, which are Plascrete Blocks. The controller needs to be in the center of the top layer. If the width or length of the room are even, then it can be any one of the two (or four) middle blocks. The rest of the structure is built out of Plascrete Blocks.\n\nUp to 30% of those Plascrete Blocks can be replaced by other valid blocks or materials:\n\nA Reinforced Door lets you get in and out of the cleanroom. Make sure to keep the doors closed, or the cleanroom will rapidly lose efficiency. Travel Anchors and Elevators also work, you can even embed them in the floor if you want to.\n\nIn order to automate power and item transport through the walls, you can use Cable Diodes or Machine Hulls. Just be really careful when upgrading your machines to a higher voltage. Be sure to remove the machine hulls and diodes and replace them with the new power tier, or else you will be very sad. You don't need to do this for ones you only use to pass items through.\n\nIf you want to see inside, you can use any EV+ tier glass (for example, Reinforced Glass or Managlass). If the Cleanroom does not form, mind the 30% limit: often the problem is that you added too much glass.\n\nFinally, the Cleanroom itself will need a Maintenance and Energy Hatch to run. The power usage of this multiblock is a bit unusual. It starts out at 40 EU/t and then gradually goes down. But even when it uses 40 EU/t - which is usually MV - a single LV energy hatch suffices, as long as you give it enough power. Just keep in mind that this makes the Cleanroom an exception, not the rule.\n\nLet's build a 5x5x5 room for now. You can expand it later as needed. Give it power and let it run until it reaches 100% efficiency. Below 100% efficiency, machines inside the cleanroom have a chance to void outputs, so you want to keep the cleanroom running at all times!\n\nAny maintenance issue reduces the maximum efficiency by 10%. Monitor your cleanroom with a Hand Scanner, Industrial Information Panel, or using a Needs Maintenance Cover and a Redstone Powered Light or Howler Alarm.\n\n[note]Multiblocks such as the Large Chemical Reactor or Hyper-Intensity Laser Engraver don't need to be in a cleanroom. However, you will still need the cleanroom later on for other machines, like Bio Labs.[/note]\n\n[note]Other helpful hints: you can use an AE Wireless Connector or a Transvector Interface for item transport to avoid machine hulls, and use a higher tier energy hatch to reach 100% efficiency faster.[/note]\n\n[warn]Keep in mind that you can not use anything in the cleanroom that causes pollution, or the cleanroom will stop working.[/warn]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lCleanroom",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1231
  ],
  "rewards": [],
  "tasks": []
}
